Enhance RestTemplate implementation by Template Method design pattern